--- a/letao/public/m/category.html
+++ b/letao/public/m/category.html
@@ -8,12 +8,17 @@
     <link rel="stylesheet" href="assets/mui/css/mui.min.css">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="assets/fontAwesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/category.css">
     <script src="assets/mui/js/mui.min.js"></script>
+    <script src="assets/zepto/zepto.min.js"></script>
+    <script src="assets/artTemplate/template-native.js"></script>
+    <script src="js/category.js"></script>
     <script src="js/index.js"></script>
+
 </head>
 
 <body>
-
+    <!-- 表头 -->
     <header class="mui-bar mui-bar-nav my-header">
         <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
         <h1 class="mui-title">网页标题</h1>
@@ -38,10 +43,51 @@
             <span class="mui-tab-label">会员中心</span>
         </a>
     </nav>
+    <div class="my-content">
+        <div class="category-left">
+            <div class="mui-scroll-wrapper">
+                <div class="mui-scroll">
+                    <div class="links" id="links">
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    <div class="mui-content">
-
+        <div class="category-right">
+            <div class="mui-scroll-wrapper">
+                <div class="mui-scroll">
+                    <ul class="brand-list mui-clearfix">
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
+
+    <script type="text/template" id="category-first">
+        <% for (var i=0;i<result.length;i++) { %>
+            <a href="#" class="active" data-id="<% = result[i].id %>">
+                <% = result[i].categoryName %>
+            </a>
+            <% } %>
+    </script>
+
+    <!-- 二级分类 -->
+    <script type="text/template" id="category-second">
+        <% for( var i=0; i<rows.length; i++){%>
+            <li>
+                <a href="">
+                    <img src="<%=rows[i].barndLogo %>" alt="">
+                    <p>
+                        <%= rows[i].brandName %>
+                    </p>
+                </a>
+            </li>
+            <% } %>
+
+                <% if (!rows.length){%>
+                    <div class="noresult"> 暂无数据 </div>
+                    <% } %>
+    </script>
 </body>
 
 </html>
