--- a/letao/public/m/search.html
+++ b/letao/public/m/search.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="assets/mui/css/mui.min.css">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="assets/fontAwesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/search.css">
     <script src="assets/mui/js/mui.min.js"></script>
     <script src="js/index.js"></script>
+    <script src="js/search.js"></script>
+    <script src="assets/zepto/zepto.min.js"></script>
+    <script src="assets/artTemplate/template-native.js"></script>
 </head>
 
 <body>
@@ -40,8 +44,29 @@
     </nav>
 
     <div class="mui-content">
+        <div class="container">
+            <div class="search">
+                <input type="text" placeholder="搜索你喜欢的商品">
+                <input type="button" value="搜索" id="search-btn">
+            </div>
+            <div class="history-top mui-clearfix">
+                <span class="title mui-pull-left">搜索历史</span>
+                <span class="clear mui-pull-right mui-icon mui-icon-trash" id="clearBtn">清空历史</span>
+            </div>
+        </div>
+        <ul class="mui-table-view" id="history-box">
 
+
+        </ul>
     </div>
+    <script type="text/template" id="historyTpl">
+        <% for ( var i=0; i<result.length;i++){ %>
+            <li class="mui-table-view-cell">
+                <%= result[i] %>
+            </li>
+            <% } %>
+    </script>
 </body>
+
 
 </html>
